Fix grid gap not shrinking in sync with grid tiles Grid not shrinking when vertical height is too small Remove both-edges from scrollbar-gutter as it causes the board edge to be clipped without a horizontal scrollbar.

--- a/src/components/game-board.scss
+++ b/src/components/game-board.scss
@@ -2,6 +2,17 @@
   display: grid;
   grid-template-columns: repeat(var(--board-tile-count), 1fr);
   gap: var(--board-tile-gap);
+  position: relative;
+  min-width: min-content;
+  min-height: min-content;
+  aspect-ratio: 1;
+}
+
+.gameBoard,
+.chips {
+  max-width: var(--board-vertical-height-constrainer);
+}
+
 .gameBoardBackground {
   position: absolute;
   top: 0;
